# Tenement

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Tiltfile  flake.nix  license
.cargo/: config
.github/workflows/: main-validation.yml
controller/: Cargo.toml  Dockerfile
controller/src/: cli.rs  config.rs  crd.rs  main.rs  server.rs  tracer.rs
controller/src/routes/: k8s.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: k8s.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: crd.rs  lib.rs
crates/common/src/db/: mod.rs
crates/common/src/k8s/: crd.rs  methods.rs  mod.rs
crates/common/src/models/: mod.rs
crates/controller/: Cargo.toml  Dockerfile
crates/controller/src/: config.rs  logger.rs  main.rs  server.rs  tracer.rs
crates/controller/src/routes/: base.rs  k8s.rs  mod.rs
crates/hb-prisma/: Cargo.toml
crates/hb-prisma/prisma/: schema.prisma
crates/hb-prisma/src/: lib.rs  models.rs
k8s/: crd.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  role.yaml  service.yaml
scripts/: kind-with-registry.sh
src/: cli.rs  main.rs  server.rs  tracer.rs
src/routes/: k8s.rs
webui/: Dockerfile  package-lock.json
webui/public/: manifest.json
webui/src/components/starter/header/: header.tsx
webui/src/components/starter/icons/: hubifier.tsx
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/scripts/: mod.rs
xtask/src/utils/: mod.rs
