[workspace]
resolver = "2"
default-members = [
  "crates/cli",
  "crates/common",
  "crates/controller",
  "crates/hb-prisma"
]

members = [
  "crates/cli",
  "crates/common",
  "crates/controller",
  "crates/hb-prisma",
  "xtask"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/hubifier/hubifier"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
log = "0.4.17"
url = { version = "2.3.1", features = ["serde"] }
thiserror = "1.0.41"
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["derive"] }
pretty_env_logger = "0.4.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false }

k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.82.2", features = ["runtime", "derive"] }
