[package]
name = "xtask"
version = { workspace = true } 
edition = { workspace = true } 
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger.workspace = true
clap.workspace = true
serde.workspace = true
anyhow.workspace = true
log.workspace = true
