[package]
name = "hubify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common/" }
clap = { version = "4.1.11", features = ["derive"] }
anyhow = "1.0.71"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.82.2", features = ["runtime", "derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tokio = { version = "1.28.0", features = ["full"] }
