[package]
name = "hb-cli"
version = { workspace = true } 
edition = { workspace = true } 
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hb-common = {path = "../common/", defeault-features = false, features = ["k8s","db"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.82.2", features = ["runtime", "derive"] }
tokio = { version = "1.28.0", features = ["full"] }

anyhow.workspace = true
pretty_env_logger.workspace = true
clap.workspace = true
url.workspace = true
log.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true

