[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.82.2", features = ["runtime", "derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
schemars = { version = "0.8.12", features = ["url", "chrono"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
url = { version = "2.3.1", features = ["serde"] }
