[package]
name = "hb-controller"
version = { workspace = true } 
edition = { workspace = true } 
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hb-common = { path = "../common/",default-features = false }
axum = { version = "0.6.11", features = ["ws"] }
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }

tracing = { version = "0.1.37", features = ["async-await"] }
tower = {version = "0.4.13" }
tower-http = {version = "0.4" }
axum-tracing-opentelemetry = { version = "0.10.0", features = [
  "otlp",
  "tracing_subscriber_ext",
] }
opentelemetry = { version = "0.18.0", features = [
  "rt-tokio",
  "metrics",
] }
tracing-opentelemetry = {version = "0.18.0" }

reqwest = "0.11.15"
tracing-subscriber = "0.3.16"
opentelemetry-otlp = { version = "0.11.0",features = [
  "grpc-tonic",
  "http-proto"
]} 
backoff = "0.4.0"
futures = "0.3.28"
envy = "0.4.2"
cfg-if = "1.0.0"

thiserror.workspace = true
url.workspace = true
log.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true

[features]
default = ["db"]
db = ["hb-common/db"]
k8s = ["hb-common/k8s"]

